# focodyn

./: README.md  pyproject.toml
examples/: plot_g1_motion_derivatives.py  visualize_g1_dynamics.py
src/differentiable_humanoid_dynamics/: visualization.py
src/focodyn/: __init__.py  _torch.py  assets.py  contacts.py  dynamics.py  motion_derivatives.py  rotations.py  visualization.py
tests/: test_contacts.py  test_dynamics.py  test_input_constraints.py  test_motion.py  test_rotations.py  test_urdf.py  test_visualization.py
