[project]
name = "focodyn"
version = "0.1.0"
description = "Differentiable floating-base dynamics and contact-pose Jacobians for legged robots."
readme = "README.md"
authors = [
    { name = "Maximilian Stölzle", email = "maximilian@stoelzle.ch" }
]
requires-python = ">=3.11"
dependencies = [
    "adam-robotics[pytorch]>=0.5.0",
    "numpy>=1.26",
    "torch>=2.3",
    "torch-dxdt>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.6",
    "pytest>=8.0",
]
viz = [
    "matplotlib>=3.8",
    "viser>=0.2.23",
    "yourdfpy>=0.0.58",
]

[project.scripts]
focodyn-check-adam-g1 = "focodyn.cli.check_adam_g1:main"
focodyn-visualize-g1 = "focodyn.visualization:main"
focodyn-visualize-dynamics = "focodyn.visualization:dynamics_main"
focodyn-visualize-input-constraints = "focodyn.visualization:input_constraints_main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["focodyn"]

[tool.coverage.report]
show_missing = true
skip_empty = true
